rename logo file

--- a/source/_static/css/xivo.css
+++ b/source/_static/css/xivo.css
@@ -61,7 +61,7 @@ div.important {
 div.related {
 	color: #111;
 	text-shadow: 0px 1px 0 #ccc;
-	background: #ccc url("../img/xivo-trans_92x32.png") top left no-repeat;
+	background: #ccc url("../img/logo.png") top left no-repeat;
 }
 
 div.related ul {
